<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dariusz.wyszukiwarkalekow.AddActivity">
    <EditText
        android:id="@+id/nameAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/name"
        />
    <EditText
        android:id="@+id/townAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/town"
        android:layout_below="@id/nameAdd"
        />
    <EditText
        android:id="@+id/streetAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/street"
        android:layout_below="@id/townAdd"
        />
    <EditText
        android:id="@+id/priceAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/price"
        android:layout_below="@id/streetAdd"
        />
    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAdd"
        android:text="@string/add"
        android:layout_below="@id/priceAdd"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/testAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
