<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_v2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dariusz.wyszukiwarkalekow.AddV2Activity">
    <TextView
        android:id="@+id/nameAddv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        />
    <TextView
        android:id="@+id/qrAddv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/nameAddv2"
        />
    <EditText
        android:id="@+id/townAddv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/town"
        android:layout_below="@id/qrAddv2"
        />
    <EditText
        android:id="@+id/streetAddv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/street"
        android:layout_below="@id/townAddv2"
        />
    <EditText
        android:id="@+id/priceAddv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/price"
        android:layout_below="@id/streetAddv2"
        />
    <Button
        android:id="@+id/addv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAdd"
        android:text="@string/add"
        android:layout_below="@id/priceAddv2"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/testAddv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addv2"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
