<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_looking_for"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dariusz.wyszukiwarkalekow.view.search.LookingForActivity">
    <EditText
        android:id="@+id/nameLookingFor_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/townLookingFor_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLookingFor_edittext"
        android:gravity="center_horizontal"
        android:hint="@string/town"
        />
    <Button
        android:id="@+id/search_dataLookingFor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/townLookingFor_edittext"
        android:text="@string/search"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/scan_dataLookingFor_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_dataLookingFor_button"
        android:text="scan"
        android:layout_centerHorizontal="true"
        />
    <RelativeLayout
        android:id="@+id/progressLayoutLookingFor_button"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ProgressBar
            android:id="@+id/progressBar2LookingFor_button"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
